<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">eClassMates</string>
    <string name="action_settings">Logout</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_clases">My lessons</string>
    <string name="title_activity_clases_cerradas">My closed lessons</string>
    <string name="title_activity_alumnos">List of students</string>
    <string name="logoEclass">logoEclass</string>
    <string name="title_activity_firma_alumno">Student Sign</string>
    <string name="close_class">Close Class</string>
    <string name="teacher_confirm">Teacher confirms</string>
    <string name="remove_signature">Sure you want remove the signature?</string>
    <string name="change_sucess">Change success!</string>
    <string name="password_incorrect">The password is incorrect, try again</string>
    <string name="cancel">Cancel</string>
    <string name="already_absent">This student is already absent</string>
    <string name="reset_changes">Sure you want reset the state of this student?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="studen_unmark">This student is already unmark</string>
    <string name="sync_class">Sync class, please wait.</string>
    <string name="sync_class_error">The class can not be sync, please check your connection and try again.</string>
    <string name="only_class_sync">Only closed classes can be synchronized!</string>
    <string name="dismiss">Dismiss Class</string>
    <string name="action_undone">This action can not be undone, are you sure?</string>
    <string name="class_removed">Class successfully removed.</string>
    <string name="class_uploaded">Class successfully uploaded.</string>
    <string name="save_signature_title">Save Signature</string>
    <string name="save_signature_desc">Are you sure you want save your signature?</string>
    <string name="empty_signature">You must sign before save your assist.</string>
    <string name="image_unsaved">The signature can not be saved, please try again.</string>
    <string name="welcome">Welcome</string>
    <string name="loading_data">Loading data, please wait.</string>
    <string name="bad_document_format">The RUT is not valid, please try again.</string>
    <string name="enter_document">You must enter a valid document</string>
    <string name="enter_password">You must enter a password</string>
    <string name="string_class">Lessons</string>
    <string name="has_sync">Are synchronized</string>
    <string name="has_cancel">Have been cancelled</string>
    <string name="dont_class_sync">No classes were found</string>
    <string-array name="documentos_identificacion">
        <item>Rut</item>
        <item>DNI</item>
        <item>CC</item>
        <item>Passport</item>
    </string-array>
    <string name="type_document">Select a type of document</string>
    <string name="order_text">Order changed</string>
    <string name="no_connection">You must be connected to the internet to send information</string>
    <!-- Vistas -->
    <string name="present">Present</string>
    <string name="student">Student</string>
    <string name="string_synchronized">Synchronize</string>
    <string name="closed">Closed</string>
    <string name="accept">Accept</string>
    <string name="login_other_account">Login with another account</string>
    <string name="login">Login</string>
    <string name="absent">Absent</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="setting_text">Settings</string>
    <string name="comentarios">Comments</string>
    <!-- Menu -->
    <string name="search_hint_text">Search a student</string>
    <!-- Comentarios  -->
    <string name="comments">Write a Comment</string>
    <string name="save_comment">Save</string>
    <string name="list_comments">List of comments</string>
    <string name="error_save_comment">An error occurred while saving the comment, please try again</string>
    <string name="empty_comment">You must enter a message to save the comment</string>
    <string name="memory_size">You have 10% or less space on your disk.</string>
    <string name="title_activity_nuevo_alumno">New Student</string>
    <!-- Alumnos sin clase -->
    <string name="description_ac">All the inputs are required, please enter a valid information</string>
    <string name="new_student">Save changes</string>
    <string name="document_number">Document number</string>
    <string name="student_email">Email</string>
    <string name="fullname_student">Full name</string>
    <string name="addStudent">Add new student</string>
    <string name="enter_name">You must enter a name for the student</string>
    <string name="enter_email">You must enter a email for the student</string>
    <string name="valid_email">You must enter a valid email address</string>
    <string name="student_created">Student created successfully</string>
    <string name="student_already_exist">This student already exists for this class</string>
    <string name="listStudents">List of Students</string>
    <string name="title_activity_alumnos_cursos">AlumnosCursos</string>

    <string name="hello_world">Hello world!</string>
</resources>