<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.moveapps.asistenciaeclass.NuevoAlumno">

    <TextView android:text="@string/description_ac" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:singleLine="false"
        android:textStyle="italic"
        android:typeface="normal"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/fullnameStudent"
        android:hint="@string/fullname_student"
        android:layout_below="@+id/documentNumberStudent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/documentNumberStudent"
        android:layout_alignEnd="@+id/documentNumberStudent"
        android:layout_marginBottom="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailStudent"
        android:singleLine="false"
        android:hint="@string/student_email"
        android:inputType="textEmailAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/fullnameStudent"
        android:layout_alignRight="@+id/fullnameStudent"
        android:layout_alignEnd="@+id/fullnameStudent" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/documentTypeStudent"
        android:entries="@array/documentos_identificacion"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/documentNumberStudent"
        android:hint="@string/document_number"
        android:inputType="text"
        android:layout_below="@+id/documentTypeStudent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_student"
        android:id="@+id/btnNewStudent"
        style="@style/BotonLogin"
        android:onClick="crearAlumno"
        android:layout_below="@+id/emailStudent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
