<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:id="@+id/relativeLayout">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoImage"
        android:src="@drawable/logo_eclass"
        android:contentDescription="@string/logoEclass"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="20dp" />

    <Spinner
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/spinner"
        android:dropDownSelector="@android:drawable/spinner_background"
        android:entries="@array/documentos_identificacion"
        android:prompt="@string/type_document"
        android:layout_below="@+id/logoImage"
        android:layout_centerInParent="true" />

    <EditText
        style="@style/EditTextWithBorder"
        android:background="@drawable/textlines"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:maxLength="10"
        android:layout_below="@+id/spinner"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

    <EditText
        style="@style/EditTextWithBorder"
        android:background="@drawable/textlines"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:id="@+id/password"
        android:ems="10"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/BotonLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="INGRESAR"
        android:id="@+id/buttonIngresar"
        android:onClick="ingresar"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
