<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="#3179B6"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_comments"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="normal"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/commentsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_below="@id/headerLayout"
        android:paddingBottom="50dp"
        android:layout_marginBottom="0dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="#ababab"/>
        <EditText
            android:id="@+id/writeComment"
            android:hint="@string/comments"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="12dp"
            android:textColor="#000000"
            android:background="#00000000"
            android:layout_toLeftOf="@+id/btnComentario"
            android:layout_toStartOf="@+id/btnComentario" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnComentario"
            android:text="@string/save_comment"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</RelativeLayout>